.feat: move initialization of Sprite into controller
