# src/server/models/payment.mjs
@@ -1,0 +1,7 @@
+class Payment {
+    amount_including_tax
+    amount_excl
+    vat_rate
+    libelle
+    is_test = true
+}
